# azure-key-vault-client

./: Cargo.toml  README.md
examples/: client.rs
src/: client.rs  lib.rs
src/client/: identity.rs  key.rs  secret.rs  types.rs
